<resources>
    <string name="app_name">What\'s for dinner?</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Random</string>
    <string name="previous">Back</string>
    <string name="button">Do stuff</string>
    <string name="button_plus">Add one</string>
    <string name="button_add_dish">Add dish</string>
    <string name="random_header">Here is a random number between 0 and %d.</string>
    <string name="hint_dish_name">Dish name</string>
    <string name="hint_dish_type">Dish type</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Not saved</string>
    <string name="changes_saved">Changes saved</string>
    <string name="dish_name">Dish name</string>
    <string name="dish_type">Dish type</string>
    <string name="rand_dish">Rand dish</string>
    <string name="not_implemented">Not implemented</string>
    <string name="type">Type</string>
    <string name="types">Type(s)</string>
    <string name="yet_to_be_determined">Press dice symbol for a random dish</string>
    <string name="get_back">get back</string>
    <string name="delete_item">Delete item</string>
    <string name="edit_item">Edit item</string>
    <string name="add_type">Add new type</string>
    <string name="provide_a_name_toast">Please provide a name</string>
    <string name="new_type_name">New type</string>
    <string name="type_added">New type added</string>
    <string name="type_present">Type already present</string>
    <string name="select_type_first">Please select a type</string>
    <string name="action_sync">Sync data</string>
    <string name="action_override">Override with server data</string>
    <string name="note">Note</string>
    <string name="dish_name_view">Name</string>
</resources>